--- a/index.html
+++ b/index.html
@@ -5,46 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
-        <nav>
-            <a lang="en" href="#">
+        <nav class="nav">
+            <a class="link" lang="en" href="#">
                 WebStudio
             </a>
-            <ul>
-                <li>
-                    <a href="./index.html">
+            <ul class="list">
+                <li class="list-item">
+                    <a class="link" href="./index.html">
                         Студия
                     </a>
                 </li>
-                <li>
-                    <a href="./portfolio.html">
+                <li class="list-item">
+                    <a class="link" href="./portfolio.html">
                         Портфолио
                     </a>
                 </li>
-                <li>
-                    <a href="#">
+                <li class="list-item">
+                    <a class="link" href="#">
                         Контакты
                     </a>
                 </li>
             </ul>
         </nav>
-        <ul>
-            <li>
-                <a href="mailto:info@devstudio.com">
+        <ul class="list-contacts">
+            <li class="contact">
+                <a class="link" href="mailto:info@devstudio.com">
                     info@devstudio.com
                 </a>
             </li>
-            <li>
-                <a href="tel:+380961111111">
+            <li class="contact">
+                <a class="link" href="tel:+380961111111">
                     +38 096 111 11 11
                 </a>
             </li>
         </ul>
     </header>
     <main>
-        <section>
+        <section class="hero" >
             <h1>
                 Эффективные решения для вашего бизнеса
             </h1>
@@ -163,19 +164,19 @@
             WebStudio
         </a>
         <address>
-            <ul>
-                <li>
-                    <a href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
+            <ul class="address-list">
+                <li class="address-item">
+                    <a class="address-link" href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
                         г. Киев, пр-т Леси Украинки, 26
                     </a>
                 </li>
-                <li>
-                    <a href="mailto:info@devstudio.com">
+                <li class="address-item">
+                    <a class="address-link" href="mailto:info@devstudio.com">
                         info@devstudio.com
                     </a>
                 </li>
-                <li>
-                    <a href="tel:+380961111111">
+                <li class="address-item">
+                    <a class="address-link" href="tel:+380961111111">
                         +38 096 111 11 11
                     </a>
                 </li>
