--- a/portfolio.html
+++ b/portfolio.html
@@ -9,36 +9,36 @@
 </head>
 <body>
     <header>
-        <nav class="header-nav">
-            <a class="header-nav-link" lang="en" href="#">
+        <nav class="nav">
+            <a class="link" lang="en" href="#">
                 WebStudio
             </a>
-            <ul>
-                <li>
-                    <a class="header-nav-link" href="./index.html">
+            <ul class="list">
+                <li class="list-item">
+                    <a class="link" href="./index.html">
                         Студия
                     </a>
                 </li>
-                <li>
-                    <a class="header-nav-link" href="./portfolio.html">
+                <li class="list-item">
+                    <a class="link" href="./portfolio.html">
                         Портфолио
                     </a>
                 </li>
-                <li>
-                    <a class="header-nav-link" href="#">
+                <li class="list-item">
+                    <a class="link" href="#">
                         Контакты
                     </a>
                 </li>
             </ul>
         </nav>
-        <ul class="header-list">
-            <li class="header-contact">
-                <a class="header-link" href="mailto:info@devstudio.com">
+        <ul class="list-contacts">
+            <li class="contact">
+                <a class="link" href="mailto:info@devstudio.com">
                     info@devstudio.com
                 </a>
             </li>
-            <li class="header-contact">
-                <a class="header-link" href="tel:+380961111111">
+            <li class="contact">
+                <a class="link" href="tel:+380961111111">
                     +38 096 111 11 11
                 </a>
             </li>
@@ -50,27 +50,26 @@
                 Portfolio
             </h1>
             <ul class="menu-list">
-                <li class="manu-list-item">
+                <li class="menu-item">
                     <button type="button" class="menu-btn">
                         Все
                     </button>
                 </li>
-                <li class="manu-list-item">
+                <li class="menu-item">
                     <button type="button" class="menu-btn">
                         Веб-сайты
                     </button>
-                </li>
-                <li class="manu-list-item">
+                <li class="menu-item">
                     <button type="button" class="menu-btn">
                         Приложения
                     </button>
                 </li>
-                <li class="manu-list-item">
+                <li class="menu-item">
                     <button type="button" class="menu-btn">
                         Дизайн
                     </button>
                 </li>
-                <li class="manu-list-item">
+                <li class="menu-item">
                     <button type="button" class="menu-btn">
                         Маркетинг
                     </button>
@@ -78,69 +77,69 @@
             </ul>
         </section>
         <section class="catalog">
-            <h2 class="catalog-title" lang="en">Catalog</h2>
-            <ul class="catalog-list">
-                <li class="catalog-item">
-                    <a class="catalog-link" href="">
-                        <img class="catalog-image" src="./images/portfolio/catalog_img1.jpg" alt="страница_веб-сайта" width="370" height="294">
-                        <h3 class="catalog-image-title">Технокряк</h3>
-                        <p class="catalog-image-descr">Веб-сайт</p>
+            <h2 class="title" lang="en">Catalog</h2>
+            <ul class="list">
+                <li class="item">
+                    <a class="link" href="">
+                        <img class="image" src="./images/portfolio/catalog_img1.jpg" alt="страница_веб-сайта" width="370" height="294">
+                        <h3 class="image-title">Технокряк</h3>
+                        <p class="image-descr">Веб-сайт</p>
                     </a>
                 </li>
-                <li class="catalog-item">
-                    <a class="catalog-link" href="">
-                        <img class="catalog-image" src="./images/portfolio/catalog_img2.jpg" alt="баскетбол" width="370" height="294">
-                        <h3 class="catalog-image-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-                        <p class="catalog-image-descr">Дизайн</p>
+                <li class="item">
+                    <a class="link" href="">
+                        <img class="image" src="./images/portfolio/catalog_img2.jpg" alt="баскетбол" width="370" height="294">
+                        <h3 class="image-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                        <p class="image-descr">Дизайн</p>
                     </a>
                 </li>
-                <li class="catalog-item">
-                    <a class="catalog-link" href="">
-                        <img class="catalog-image" src="./images/portfolio/catalog_img3.jpg" alt="лого-рыба" width="370" height="294">
-                        <h3 class="catalog-image-title">Ресторан <span lang="en">Seafood</span></h3>
-                        <p class="catalog-image-descr">Приложение</p>
+                <li class="item">
+                    <a class="link" href="">
+                        <img class="image" src="./images/portfolio/catalog_img3.jpg" alt="лого-рыба" width="370" height="294">
+                        <h3 class="image-title">Ресторан <span lang="en">Seafood</span></h3>
+                        <p class="image-descr">Приложение</p>
                     </a>
                 </li>
-                <li class="catalog-item">
-                    <a class="catalog-link" href="">
-                        <img class="catalog-image" src="./images/portfolio/catalog_img4.jpg" alt="наушники" width="370" height="294">
-                        <h3 class="catalog-image-title">Проект <span lang="en">Prime</span></h3>
-                        <p class="catalog-image-descr">Маркетинг</p>
+                <li class="item">
+                    <a class="link" href="">
+                        <img class="image" src="./images/portfolio/catalog_img4.jpg" alt="наушники" width="370" height="294">
+                        <h3 class="image-title">Проект <span lang="en">Prime</span></h3>
+                        <p class="image-descr">Маркетинг</p>
                     </a>
                 </li>
-                <li class="catalog-item">
-                    <a class="catalog-link" href="">
-                        <img class="catalog-image" src="./images/portfolio/catalog_img5.jpg" alt="коробки" width="370" height="294">
-                        <h3 class="catalog-image-title">Проект<span lang="en">Boxes</span></h3>
-                        <p class="catalog-image-descr">Приложение</p>
+                <li class="item">
+                    <a class="link" href="">
+                        <img class="image" src="./images/portfolio/catalog_img5.jpg" alt="коробки" width="370" height="294">
+                        <h3 class="image-title">Проект<span lang="en">Boxes</span></h3>
+                        <p class="image-descr">Приложение</p>
                     </a>
                 </li>
-                <li class="catalog-item">
-                    <a class="catalog-link" href="">
-                        <img class="catalog-image" src="./images/portfolio/catalog_img6.jpg" alt="страница_веб-сайта" width="370" height="294">
-                        <h3 class="catalog-image-title" lang="en">Inspiration has no Borders</h3>
-                        <p class="catalog-image-descr">Веб-сайт</p>
+                <li class="item">
+                    <a class="link" href="">
+                        <img class="image" src="./images/portfolio/catalog_img6.jpg" alt="страница_веб-сайта" width="370" height="294">
+                        <h3 class="image-title" lang="en">Inspiration has no Borders</h3>
+                        <p class="image-descr">Веб-сайт</p>
                     </a>
                 </li>
-                <li class="catalog-item">
-                    <a class="catalog-link" href="">
-                        <img class="catalog-image" src="./images/portfolio/catalog_img7.jpg" alt="журнал" width="370" height="294">
-                        <h3 class="catalog-image-title">Издание<span lang="en">Limited Edition</span></h3>
-                        <p class="catalog-image-descr">Дизайн</p>
+                <li class="item">
+                    <a class="link" href="">
+                        <img class="image" src="./images/portfolio/catalog_img7.jpg" alt="журнал" width="370" height="294">
+                        <h3 class="image-title">Издание<span lang="en">Limited Edition</span></h3>
+                        <p class="image-descr">Дизайн</p>
                     </a>
                 </li>
-                <li class="catalog-item">
-                    <a class="catalog-link" href="">
-                        <img class="catalog-image" src="./images/portfolio/catalog_img8.jpg" alt="етикетка" width="370" height="294">
-                        <h3 class="catalog-image-title">Проект<span lang="en">LAB</span></h3>
-                        <p class="catalog-image-descr">Маркетинг</p>
+                <li class="item">
+                    <a class="link" href="">
+                        <img class="image" src="./images/portfolio/catalog_img8.jpg" alt="етикетка" width="370" height="294">
+                        <h3 class="image-title">Проект<span lang="en">LAB</span></h3>
+                        <p class="image-descr">Маркетинг</p>
                     </a>
                 </li>
-                <li class="catalog-item">
-                    <a class="catalog-link" href="">
-                        <img class="catalog-image" src="./images/portfolio/catalog_img9.jpg" alt="работа_с_ПК" width="370" height="294">
-                        <h3 class="catalog-image-title" lang="en">Growing Business</h3>
-                        <p class="catalog-image-descr">Приложение</p>
+                <li class="item">
+                    <a class="link" href="">
+                        <img class="image" src="./images/portfolio/catalog_img9.jpg" alt="работа_с_ПК" width="370" height="294">
+                        <h3 class="image-title" lang="en">Growing Business</h3>
+                        <p class="image-descr">Приложение</p>
                     </a>
                 </li>
             </ul>
