--- a/index.html
+++ b/index.html
@@ -10,93 +10,93 @@
 <body>
     <header>
         <nav class="nav">
-            <a class="nav-link" lang="en" href="#">
-                WebStudio
+            <a class="logo" lang="en" href="#">
+                <span class="logo-part" lang="en">Web</span>Studio
             </a>
-            <ul class="nav-list">
-                <li class="nav-item">
-                    <a class="list-link" href="./index.html">
+            <ul class="list">
+                <li class="item">
+                    <a class="link" href="./index.html">
                         Студия
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="item">
                     <a class="link" href="./portfolio.html">
                         Портфолио
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="item">
                     <a class="link" href="#">
                         Контакты
                     </a>
                 </li>
             </ul>
         </nav>
-        <ul class="contacts">
-            <li class="contacts-item">
-                <a class="contacts-link" href="mailto:info@devstudio.com">
+        <ul class="contacts list">
+            <li class="item">
+                <a class="link" href="mailto:info@devstudio.com">
                     info@devstudio.com
                 </a>
             </li>
-            <li class="contacts-item">
-                <a class="contacts-link" href="tel:+380961111111">
+            <li class="item">
+                <a class="link" href="tel:+380961111111">
                     +38 096 111 11 11
                 </a>
             </li>
         </ul>
     </header>
     <main>
-        <section class="hero" >
-            <h1>
+        <section class="hero">
+            <h1 class="title">
                 Эффективные решения для вашего бизнеса
             </h1>
-            <button type="button">
+            <button type="button" class="btn">
                 Заказать услугу
             </button>
         </section>
-        <section>
-            <h2 lang="en">
+        <section class="section">
+            <h2 class="section-title" lang="en">
                 Feature
             </h2>
-            <ul>
+            <ul class="list">
                 <li>
-                    <h3>
+                    <h3 class="item-title">
                         Внимание к деталям
                     </h3>
-                    <p>
+                    <p class="item-inform">
                         Идейные соображения, а также начало повседневной работы по формированию позиции.
                     </p>
                 </li>
                 <li>
-                    <h3>
+                    <h3 class="item-title">
                         Пунктуальность
                     </h3>
-                    <p>
+                    <p class="item-inform">
                         Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
                 <li>
-                    <h3>
+                    <h3 class="item-title">
                         Планирование
                     </h3>
-                    <p>
+                    <p class="item-inform">
                         Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
                 <li>
-                    <h3>
+                    <h3 class="item-title">
                         Современные технологии
                     </h3>
-                    <p>
+                    <p class="item-inform">
                         Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                     </p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>
+        <section class="section">
+            <h2 class="section-title">
                 Чем мы занимаемся
             </h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <a href="#">
                         <img src="./images/what-we-do1.jpg" alt="написание_программы" width="370" height="294">
@@ -114,18 +114,18 @@
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>
+        <section class="section">
+            <h2 class="section-title">
                 Наша команда
             </h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <a href="">
                         <img src="./images/team_card_1.jpg" alt="Игорь" width="270" height="250">
-                        <h3>
+                        <h3 class="item-title">
                         Игорь Демьяненко
                         </h3>
-                        <p lang="en">
+                        <p class="item-inform" lang="en">
                             Product Designer
                         </p>
                     </a>
@@ -133,10 +133,10 @@
                 <li>
                     <a href="">
                         <img src="./images/team_card_2.jpg" alt="Ольга" width="270" height="250">
-                        <h3>
+                        <h3 class="item-title">
                             Ольга Репина
                         </h3>
-                        <p lang="en">
+                        <p class="item-inform" lang="en">
                             Frontend Developer
                         </p>
                     </a>
@@ -144,10 +144,10 @@
                 <li>
                     <a href="">
                         <img src="./images/team_card_3.jpg" alt="Николай" width="270" height="250">
-                        <h3>
+                        <h3 class="item-title">
                             Николай Тарасов
                         </h3>
-                        <p lang="en">
+                        <p class="item-inform" lang="en">
                             Marketing
                         </p>
                     </a>
@@ -155,10 +155,10 @@
                 <li>
                     <a href="">
                         <img src="./images/team_card_4.jpg" alt="Михаил" width="270" height="250">
-                        <h3>
+                        <h3 class="item-title">
                             Михаил Ермаков
                         </h3>
-                        <p lang="en">
+                        <p class="item-inform" lang="en">
                             UI Designer
                         </p>
                     </a>
@@ -167,23 +167,23 @@
         </section>
     </main>
     <footer>
-        <a class="footer-link" lang="en" href="#">
-            WebStudio
+        <a class="logo" lang="en" href="#">
+            <span class="logo-part" lang="en">Web</span>Studio
         </a>
         <address>
-            <ul class="address-list">
-                <li class="address-item">
-                    <a class="address-link" href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
+            <ul class="address list">
+                <li class="item">
+                    <a class="link" href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
                         г. Киев, пр-т Леси Украинки, 26
                     </a>
                 </li>
-                <li class="address-item">
-                    <a class="address-link" href="mailto:info@devstudio.com">
+                <li class="item">
+                    <a class="link" href="mailto:info@devstudio.com">
                         info@devstudio.com
                     </a>
                 </li>
-                <li class="address-item">
-                    <a class="address-link" href="tel:+380961111111">
+                <li class="item">
+                    <a class="link" href="tel:+380961111111">
                         +38 096 111 11 11
                     </a>
                 </li>
