--- a/portfolio.html
+++ b/portfolio.html
@@ -10,34 +10,34 @@
 <body>
     <header>
         <nav class="nav">
-            <a class="link" lang="en" href="#">
-                WebStudio
+            <a class="logo" lang="en" href="#">
+                <span class="logo-part" lang="en">Web</span>Studio
             </a>
             <ul class="list">
-                <li class="list-item">
+                <li class="item">
                     <a class="link" href="./index.html">
                         Студия
                     </a>
                 </li>
-                <li class="list-item">
+                <li class="item">
                     <a class="link" href="./portfolio.html">
                         Портфолио
                     </a>
                 </li>
-                <li class="list-item">
+                <li class="item">
                     <a class="link" href="#">
                         Контакты
                     </a>
                 </li>
             </ul>
         </nav>
-        <ul class="list-contacts">
-            <li class="contact">
+        <ul class="contacts list">
+            <li class="item">
                 <a class="link" href="mailto:info@devstudio.com">
                     info@devstudio.com
                 </a>
             </li>
-            <li class="contact">
+            <li class="item">
                 <a class="link" href="tel:+380961111111">
                     +38 096 111 11 11
                 </a>
@@ -46,123 +46,123 @@
     </header>
     <main>
         <section class="menu">
-            <h1 class="menu-title" lang="en">
+            <h1 class="title" lang="en">
                 Portfolio
             </h1>
-            <ul class="menu-list">
-                <li class="menu-item">
-                    <button type="button" class="menu-btn">
+            <ul class="menu-list list">
+                <li class="item">
+                    <button type="button" class="btn">
                         Все
                     </button>
                 </li>
-                <li class="menu-item">
-                    <button type="button" class="menu-btn">
+                <li class="item">
+                    <button type="button" class="btn">
                         Веб-сайты
                     </button>
-                <li class="menu-item">
-                    <button type="button" class="menu-btn">
+                <li class="item">
+                    <button type="button" class="btn">
                         Приложения
                     </button>
                 </li>
-                <li class="menu-item">
-                    <button type="button" class="menu-btn">
+                <li class="item">
+                    <button type="button" class="btn">
                         Дизайн
                     </button>
                 </li>
-                <li class="menu-item">
-                    <button type="button" class="menu-btn">
+                <li class="item">
+                    <button type="button" class="btn">
                         Маркетинг
                     </button>
                 </li>
             </ul>
         </section>
-        <section class="catalog">
-            <h2 class="title" lang="en">Catalog</h2>
+        <section class="section">
+            <h2 class="section-title" lang="en">Catalog</h2>
             <ul class="list">
                 <li class="item">
                     <a class="link" href="">
                         <img class="image" src="./images/portfolio/catalog_img1.jpg" alt="страница_веб-сайта" width="370" height="294">
-                        <h3 class="image-title">Технокряк</h3>
-                        <p class="image-descr">Веб-сайт</p>
+                        <h3 class="item-title">Технокряк</h3>
+                        <p class="item-inform">Веб-сайт</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
                         <img class="image" src="./images/portfolio/catalog_img2.jpg" alt="баскетбол" width="370" height="294">
-                        <h3 class="image-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-                        <p class="image-descr">Дизайн</p>
+                        <h3 class="item-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                        <p class="item-inform">Дизайн</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
                         <img class="image" src="./images/portfolio/catalog_img3.jpg" alt="лого-рыба" width="370" height="294">
-                        <h3 class="image-title">Ресторан <span lang="en">Seafood</span></h3>
-                        <p class="image-descr">Приложение</p>
+                        <h3 class="item-title">Ресторан <span lang="en">Seafood</span></h3>
+                        <p class="item-inform">Приложение</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
                         <img class="image" src="./images/portfolio/catalog_img4.jpg" alt="наушники" width="370" height="294">
-                        <h3 class="image-title">Проект <span lang="en">Prime</span></h3>
-                        <p class="image-descr">Маркетинг</p>
+                        <h3 class="item-title">Проект <span lang="en">Prime</span></h3>
+                        <p class="item-inform">Маркетинг</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
                         <img class="image" src="./images/portfolio/catalog_img5.jpg" alt="коробки" width="370" height="294">
-                        <h3 class="image-title">Проект<span lang="en">Boxes</span></h3>
-                        <p class="image-descr">Приложение</p>
+                        <h3 class="item-title">Проект<span lang="en">Boxes</span></h3>
+                        <p class="item-inform">Приложение</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
                         <img class="image" src="./images/portfolio/catalog_img6.jpg" alt="страница_веб-сайта" width="370" height="294">
-                        <h3 class="image-title" lang="en">Inspiration has no Borders</h3>
-                        <p class="image-descr">Веб-сайт</p>
+                        <h3 class="item-title" lang="en">Inspiration has no Borders</h3>
+                        <p class="item-inform">Веб-сайт</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
                         <img class="image" src="./images/portfolio/catalog_img7.jpg" alt="журнал" width="370" height="294">
-                        <h3 class="image-title">Издание<span lang="en">Limited Edition</span></h3>
-                        <p class="image-descr">Дизайн</p>
+                        <h3 class="item-title">Издание<span lang="en">Limited Edition</span></h3>
+                        <p class="item-inform">Дизайн</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
                         <img class="image" src="./images/portfolio/catalog_img8.jpg" alt="етикетка" width="370" height="294">
-                        <h3 class="image-title">Проект<span lang="en">LAB</span></h3>
-                        <p class="image-descr">Маркетинг</p>
+                        <h3 class="item-title">Проект<span lang="en">LAB</span></h3>
+                        <p class="item-inform">Маркетинг</p>
                     </a>
                 </li>
                 <li class="item">
                     <a class="link" href="">
                         <img class="image" src="./images/portfolio/catalog_img9.jpg" alt="работа_с_ПК" width="370" height="294">
-                        <h3 class="image-title" lang="en">Growing Business</h3>
-                        <p class="image-descr">Приложение</p>
+                        <h3 class="item-title" lang="en">Growing Business</h3>
+                        <p class="item-inform">Приложение</p>
                     </a>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a lang="en" href="#">
-            WebStudio
+        <a class="logo" lang="en" href="#">
+            <span class="logo-part" lang="en">Web</span>Studio
         </a>
         <address>
-            <ul class="address-list">
-                <li class="address-item">
-                    <a class="address-link" href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
+            <ul class="address list">
+                <li class="item">
+                    <a class="link" href="https://goo.gl/maps/qqfPJEeKQyeXZiAr5">
                         г. Киев, пр-т Леси Украинки, 26
                     </a>
                 </li>
-                <li class="address-item">
-                    <a class="address-link" href="mailto:info@devstudio.com">
+                <li class="item">
+                    <a class="link" href="mailto:info@devstudio.com">
                         info@devstudio.com
                     </a>
                 </li>
-                <li class="address-item">
-                    <a class="address-link" href="tel:+380961111111">
+                <li class="item">
+                    <a class="link" href="tel:+380961111111">
                         +38 096 111 11 11
                     </a>
                 </li>
